<resources>
    <string name="welcome_teacher">Bienvenue cher enseignant</string>
    <string name="absences_count">Vous avez %1$d absences.</string> <!-- %1$d for absences count -->
    <string name="absence_added">Absence added!</string>
    <string name="hint_date">Date</string>
    <string name="hint_name">Nom</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de Passe</string>
    <string name="hint_phone">Numéro</string>
    <string name="hint_schedule_id">id emploi</string>
    <string name="hint_subject">Matière</string>
    <string name="button_add_user">Ajouter User</string>
    <string name="button_update_user">Modifier User</string>
    <string name="button_delete_user">Supprimer User</string>
    <string name="hint_heure">Heure</string>
    <string name="hint_salle">Salle</string>
    <string name="hint_classe">Classe</string>
    <string name="hint_id">ID de l enseignant</string>
    <string name="button_submit">Ajouter Absence</string>
    <string name="error_empty_fields">Tous les champs sont obligatoires!</string>
    <string name="toast_success">Absence ajoutée avec succès!</string>
    <string name="toast_failure">Erreur lors de l ajout dune absence</string>
    <string name="add_absence">Cliquer ici pour ajouter une absence</string>
    <string name="view_schedule">Cliquer ici pour voir votre emploi du temps</string>
    <string name="app_name">ApplicationEssect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_description">Cette application est dédiée à la gestion des absences des enseignants. Elle intégrera un système d\'authentification pour différents types d\'utilisateurs (administrateur, agent de suivi ou enseignant)</string>
    <string name="about_us">À propos de nous</string>
    <string name="sign_in">Se connecter</string>
    <string name="welcome_back">Bienvenue</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="back">Retour</string>
    <string name="sign_in_error">Email ou mot de passe incorrect</string>
    <string name="sign_in_success">Connexion réussie</string>
</resources>